# LearnOpenGL

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
configuration/: root_directory.h.in
include/: Camera.h  Core.h  Shader.h
shaders/: shader.fs  shader.vs
src/: Camera.cpp  Shader.cpp
